// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should render properly on first page 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 {
  padding: 8px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border: none;
  border-radius: 32px;
  background-color: transparent;
  color: #4a4a4a;
}

.emotion-2:hover {
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: not-allowed;
}

.emotion-1 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border: none;
  border-radius: 32px;
  background-color: transparent;
  color: #b3b3b3;
}

.emotion-4:hover {
  background-color: #808080;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
  className="emotion-5"
>
  <div
    className="emotion-0"
  >
    Page 
    1
     of 
    2
  </div>
  <button
    className="emotion-2"
    disabled={true}
    type="button"
  >
    <svg
      className="emotion-1"
      data-file-name="chevron.svg"
      width={20}
    />
  </button>
  <a
    className="emotion-4"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs?page=2"
    onClick={[Function]}
    onMouseEnter={[Function]}
    rel="next"
  >
    <svg
      className="emotion-3"
      data-file-name="chevron.svg"
      width={20}
    />
  </a>
</div>
`;

exports[`<Pagination /> should render properly on last page 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 {
  padding: 8px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border: none;
  border-radius: 32px;
  background-color: transparent;
  color: #4a4a4a;
}

.emotion-4:hover {
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: not-allowed;
}

.emotion-1 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border: none;
  border-radius: 32px;
  background-color: transparent;
  color: #b3b3b3;
}

.emotion-2:hover {
  background-color: #808080;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
  className="emotion-5"
>
  <div
    className="emotion-0"
  >
    Page 
    2
     of 
    2
  </div>
  <a
    className="emotion-2"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
    onClick={[Function]}
    onMouseEnter={[Function]}
    rel="prev"
  >
    <svg
      className="emotion-1"
      data-file-name="chevron.svg"
      width={20}
    />
  </a>
  <button
    className="emotion-4"
    disabled={true}
    type="button"
  >
    <svg
      className="emotion-3"
      data-file-name="chevron.svg"
      width={20}
    />
  </button>
</div>
`;
